[ABW]: plenty of database_api tests marked as passing, others have less problems now

--- a/hivemind/tavern/test_bridge_api_patterns.tavern.yaml
+++ b/hivemind/tavern/test_bridge_api_patterns.tavern.yaml
@@ -33,7 +33,7 @@
   marks:
     - patterntest
     - failing
-    - xfail # payout is zero in some cases, grey, flag_weight
+    - xfail # grey, flag_weight
 
   includes:
     - !include common.yaml
